--- a/Regressão - introdução/Gabaritos/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
+++ b/Regressão - introdução/Gabaritos/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
@@ -1,22 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "46Wgvcemg2zt"
+      },
       "source": [
         "#**Notebook 02**\n",
         "- **Professor:** Iális Cavalcante\n",
@@ -26,39 +14,36 @@
         "- **Descrição:**\n",
         "No notebook 02 continuaremos aprendendo sobre reressão linear. Agora iremos aplicar este algoritmo a base de dados 'WorlCup 2022' que tras informações sobre a copa do mundo de futebol masculino de 2022. Neste dataset algumas informações são fornecidas como Times, Gols, Assitências e outras informações primodiais através de um arquivo CSV. Neste exemplo básico iremos explorar um pouco os dados presentes no dataset e realizar a previsão do número de gols com base em alguns atributos.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "46Wgvcemg2zt"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Instalação de bibliotecas"
-      ],
       "metadata": {
         "id": "YRh-JyH3z_cq"
-      }
+      },
+      "source": [
+        "##Instalação de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install plotly --upgrade"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SJ8QNRmJ0CYh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install plotly --upgrade"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Importações de bibliotecas"
-      ],
       "metadata": {
         "id": "NOSU58lWh-ZL"
-      }
+      },
+      "source": [
+        "##Importações de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
@@ -84,352 +69,365 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Leitura de dados"
-      ],
       "metadata": {
         "id": "G3fUxNosiBJh"
-      }
+      },
+      "source": [
+        "##Leitura de dados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "worldcup = pd.read_csv('2022worldcup.csv')\n",
-        "worldcup"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iSP91hQ4iD9q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "worldcup = pd.read_csv('2022worldcup.csv')\n",
+        "worldcup"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Funções extras"
-      ],
       "metadata": {
         "id": "JEOcnex_iGgf"
-      }
+      },
+      "source": [
+        "##Funções extras"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IeaX1tjr3AMh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Análise de dados"
-      ],
       "metadata": {
         "id": "aOXqXJqkiENs"
-      }
+      },
+      "source": [
+        "##Análise de dados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Crie um código para exibir o shape da base de dados disponibilizada\n",
-        "worldcup.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "chLAAl8fiGNg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Crie um código para exibir o shape da base de dados disponibilizada\n",
+        "worldcup.shape"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "worldcup.dtypes"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t6ULtq_iNmfa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "worldcup.dtypes"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Verifique a existência de valores nulos\n",
-        "print(worldcup.isnull().sum())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zFaT_m0SYXWF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Verifique a existência de valores nulos\n",
+        "print(worldcup.isnull().sum())"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "worldcup.describe()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XOGgjCwqYuVR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "worldcup.describe()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Aplicando gráfico de boxplot ao campo 'Age' do dataset\n",
-        "plt.boxplot(worldcup['Age'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "P0mDsPtOOSBs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Aplicando gráfico de boxplot ao campo 'Age' do dataset\n",
+        "plt.boxplot(worldcup['Age'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Aplicando gráfico de boxplot ao campo 'Gls' do dataset\n",
-        "plt.boxplot(worldcup['Gls'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_43zNZ-I5cZ5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Aplicando gráfico de boxplot ao campo 'Gls' do dataset\n",
+        "plt.boxplot(worldcup['Gls'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Analisando a correlação dos dados\n",
-        "worldcup.corr()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "d-G5fg-cZ5k9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Analisando a correlação dos dados\n",
+        "worldcup.corr()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VDSJgZlq3EIJ"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(20,10))\n",
         "plt.plot(worldcup['Squad'], worldcup['Age'])\n",
         "plt.tick_params(axis='x', labelrotation=45)\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "VDSJgZlq3EIJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QbDvdAQiDrmB"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(20,10))\n",
         "plt.plot(worldcup['Squad'], worldcup['Gls'])\n",
         "plt.tick_params(axis='x', labelrotation=45)\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "QbDvdAQiDrmB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Algoritmo de Machine Learning"
-      ],
       "metadata": {
         "id": "Vb_YTl3niM5p"
-      }
+      },
+      "source": [
+        "##Algoritmo de Machine Learning"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Divisão de dados de treino e teste"
-      ],
       "metadata": {
         "id": "WisjkmPlicex"
-      }
+      },
+      "source": [
+        "###Divisão de dados de treino e teste"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Utilizando dados de 'Acidity', 'Weight', 'Sweetness', 'Crunchiness' e 'Juiciness' para prever os dados de 'Size'\n",
-        "X_train, X_test, y_train, y_test = train_test_split(worldcup[['Age', 'Poss', 'Ast']], worldcup['Gls'], test_size = 0.3, random_state = 0)"
-      ],
+      "execution_count": 23,
       "metadata": {
         "id": "W27ARJhjigh9"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Utilizando dados de 'Acidity', 'Weight', 'Sweetness', 'Crunchiness' e 'Juiciness' para prever os dados de 'Size'\n",
+        "X_train, X_test, y_train, y_test = train_test_split(worldcup[['Age', 'Poss', 'Ast']], worldcup['Gls'], test_size = 0.3, random_state = 0)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4Ie4jkHOcfeE"
+      },
+      "outputs": [],
       "source": [
         "print('Shape dos dados de treino: {}'.format(X_train.shape))\n",
         "print('Shape das classes de treino: {}'.format(y_train.shape, '\\n'))\n",
         "print('Shape dos dados de teste: {}'.format(X_test.shape))\n",
         "print('Shape das classes de teste: {}'.format(y_test.shape))"
-      ],
-      "metadata": {
-        "id": "4Ie4jkHOcfeE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Algoritmo de Regressão Linear"
-      ],
       "metadata": {
         "id": "8aoBpPNUigxw"
-      }
+      },
+      "source": [
+        "###Algoritmo de Regressão Linear"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Crie um algortimo de Regressão Linear\n",
-        "regressor_linear = LinearRegression()"
-      ],
+      "execution_count": 26,
       "metadata": {
         "id": "BrLq0bN1imUX"
       },
-      "execution_count": 26,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Crie um algortimo de Regressão Linear\n",
+        "regressor_linear = LinearRegression()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Treinamento do modelo"
-      ],
       "metadata": {
         "id": "U6R3u6IIimw0"
-      }
+      },
+      "source": [
+        "###Treinamento do modelo"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Treine o modelo com a função fit\n",
-        "regressor_linear.fit(X_train, y_train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9_delDq4ipO6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Treine o modelo com a função fit\n",
+        "regressor_linear.fit(X_train, y_train)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "regressor_linear.score(X_test, y_test)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cOr08QA7dN5F"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "regressor_linear.score(X_test, y_test)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qFmFCRegdZMs"
+      },
+      "outputs": [],
       "source": [
         "#Realize previsões com a função predict\n",
         "previsoes = regressor_linear.predict(X_test)\n",
         "previsoes"
-      ],
-      "metadata": {
-        "id": "qFmFCRegdZMs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Visualização dos resultados"
-      ],
       "metadata": {
         "id": "diK5jeUciSio"
-      }
+      },
+      "source": [
+        "##Visualização dos resultados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Calculando ponto de interceptação\n",
-        "regressor_linear.intercept_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zwoZ2IQ-kRs3"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Calculando ponto de interceptação\n",
+        "regressor_linear.intercept_"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Calculando valores de coenficiente\n",
-        "regressor_linear.coef_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QN-LJKPikYy_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Calculando valores de coenficiente\n",
+        "regressor_linear.coef_"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "b-QB48ZeiVRg"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(20,10))\n",
         "plt.plot(np.linspace(-1, 1, len(y_test)), previsoes, label='Previsões', color='black', linewidth=1.5)\n",
         "plt.plot(np.linspace(-1, 1, len(y_test)), y_test, label='Saída Original', color='red', linewidth=1.5)\n",
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "b-QB48ZeiVRg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nurePbblfgJS"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(10,5))\n",
         "plt.plot(np.linspace(-1, 1, 10), previsoes, label='Previsões', color='black', linewidth=1.5)\n",
         "plt.plot(np.linspace(-1, 1, 10), y_test, label='Saída Original', color='red', linewidth=1.5)\n",
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "nurePbblfgJS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-VKguJuIf-X9"
+      },
+      "outputs": [],
       "source": [
         "#Calculando métricas de avaliação para modelos de regressão\n",
         "print(\" Erro máx. {}.\\n Erro médio absoluto: {}.\\n Erro quadrático absoluto: {}.\\n Raiz do erro quadrático médio: {}. \"\n",
         "      .format(max_error(previsoes, y_test),mean_absolute_error(previsoes, y_test),\n",
         "      mean_squared_error(previsoes, y_test),mean_squared_error(previsoes, y_test)\n",
         "      ))"
-      ],
-      "metadata": {
-        "id": "-VKguJuIf-X9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##Atividades de casa\n",
+        "- Configure o conjunto de dados de entrada para obter melhores desempenhos do algoritmo de regressão linear para estimar o número de gols de cada time;\n",
+        "- Desenvolva um algoritmo utilizando regressão linear para estimar a idade dos jogadores;\n",
+        "- Utilizando a correlação das variaveis, construa um algoritmo de regressão linear para estimar o número de gols de cada time e o número de assitências."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nx0py0djiU5x"
+      },
       "source": [
         "##Referências\n",
         "- [Dataset World Cup 2022](https://www.kaggle.com/datasets/greysonmb/2022-world-cup-stats)\n",
@@ -438,10 +436,22 @@
         "- [Entendendo correlação](https://www.significados.com.br/correlacao/)\n",
         "- [Regressão Linear](https://scikit-learn.org/stable/modules/linear_model.html)\n",
         "- [Métricas de avaliação](https://scikit-learn.org/stable/modules/model_evaluation.html#model-evaluation)"
-      ],
-      "metadata": {
-        "id": "Nx0py0djiU5x"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
