--- a/Regressão - introdução/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
+++ b/Regressão - introdução/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
@@ -123,8 +123,7 @@
       },
       "outputs": [],
       "source": [
-        "#Crie um código para exibir o shape da base de dados disponibilizada\n",
-        "worldcup.shape"
+        "#Crie um código para exibir o shape da base de dados disponibilizada\n"
       ]
     },
     {
@@ -146,8 +145,7 @@
       },
       "outputs": [],
       "source": [
-        "#Verifique a existência de valores nulos\n",
-        "print(worldcup.isnull().sum())"
+        "#Verifique a existência de valores nulos\n"
       ]
     },
     {
@@ -169,8 +167,7 @@
       },
       "outputs": [],
       "source": [
-        "#Aplicando gráfico de boxplot ao campo 'Age' do dataset\n",
-        "plt.boxplot(worldcup['Age'])"
+        "#Aplicando gráfico de boxplot ao campo 'Age' do dataset\n"
       ]
     },
     {
@@ -181,8 +178,7 @@
       },
       "outputs": [],
       "source": [
-        "#Aplicando gráfico de boxplot ao campo 'Gls' do dataset\n",
-        "plt.boxplot(worldcup['Gls'])"
+        "#Aplicando gráfico de boxplot ao campo 'Gls' do dataset\n"
       ]
     },
     {
@@ -288,8 +284,7 @@
       },
       "outputs": [],
       "source": [
-        "#Crie um algortimo de Regressão Linear\n",
-        "regressor_linear = LinearRegression()"
+        "#Crie um algortimo de Regressão Linear"
       ]
     },
     {
@@ -309,8 +304,7 @@
       },
       "outputs": [],
       "source": [
-        "#Treine o modelo com a função fit\n",
-        "regressor_linear.fit(X_train, y_train)"
+        "#Treine o modelo com a função fit"
       ]
     },
     {
@@ -333,7 +327,6 @@
       "outputs": [],
       "source": [
         "#Realize previsões com a função predict\n",
-        "previsoes = regressor_linear.predict(X_test)\n",
         "previsoes"
       ]
     },
