--- a/Regressão - introdução/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
+++ b/Regressão - introdução/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
@@ -397,6 +397,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##Atividades de casa\n",
+        "- Configure o conjunto de dados de entrada para obter melhores desempenhos do algoritmo de regressão linear para estimar o consumo de energia;\n",
+        "- Desenvolva um algoritmo utilizando regressão linear para para trabalhar em determinada faixa de tempo, por exemplo, prever informações em um periodo de 15 dias."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Nx0py0djiU5x"
       },
