--- a/Redes Neurais/Cópia_de_MLP_XOR_DATA.ipynb
+++ b/Redes Neurais/Cópia_de_MLP_XOR_DATA.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#**Notebook 07**\n",
+        "- **Professor:** Iális Cavalcante\n",
+        "- **Monitor:** Iago Magalhães\n",
+        "- **Disciplina:** Ciência de dados\n",
+        "- **Curso:** Engenharia da Computação\n",
+        "- **Descrição:**\n",
+        "No notebook X iremos aprender sobre Redes Neurais Artificiais do zero (sem o uso de libs)."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
