updates notebook 'Notebook 16 - Rede Neural XOR'

--- a/Redes Neurais/Notebook 16 - Rede Neural XOR.ipynb
+++ b/Redes Neurais/Notebook 16 - Rede Neural XOR.ipynb
@@ -14,6 +14,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Importação de bibliotecas"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -26,6 +33,13 @@
         "import random\n",
         "import matplotlib.pyplot as mp\n",
         "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Funções"
       ]
     },
     {
@@ -177,6 +191,13 @@
         "  #print(a)\n",
         "  acc = (count / len(camadaSaida)) * 100\n",
         "  print('Acurácia no conjunto de teste: ' + str(acc) + '%')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Executando modelo"
       ]
     },
     {
