--- a/Redes Neurais/Notebook 16 - Rede Neural XOR.ipynb
+++ b/Redes Neurais/Notebook 16 - Rede Neural XOR.ipynb
@@ -4,13 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#**Notebook 07**\n",
+        "#**Notebook 16**\n",
         "- **Professor:** Iális Cavalcante\n",
         "- **Monitor:** Iago Magalhães\n",
         "- **Disciplina:** Ciência de dados\n",
         "- **Curso:** Engenharia da Computação\n",
         "- **Descrição:**\n",
-        "No notebook X iremos aprender sobre Redes Neurais Artificiais do zero (sem o uso de libs)."
+        "No notebook 16 iremos aprender sobre Redes Neurais Artificiais do zero (sem o uso de libs)."
       ]
     },
     {
